fixed alignment for header

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
   max-width: 100vw; }
 
 section {
-  margin: 0 3rem; }
+  padding: 3rem; }
 
 ul {
   list-style: none; }
@@ -124,7 +124,7 @@ button {
 
 header {
   background-image: linear-gradient(#000000cc, #961826cc), url("img/CCScreens.jpg");
-  background-size: contain;
+  background-size: cover;
   background-position: unset;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -164,17 +164,19 @@ header {
       transform: scale(115%) skewY(10deg);
       box-shadow: 2px 2px 10px #c11f32; }
 
-.header__btn--main {
-  grid-column: 4 / span 2;
-  grid-row: 8 / 9; }
-
-.header__btn--sec {
-  grid-column: 6 / span 2;
-  grid-row: 8 / 9; }
+.header__btn {
+  justify-self: center; }
+  .header__btn--main {
+    grid-column: 4 / span 2;
+    grid-row: 8 / 9; }
+  .header__btn--sec {
+    grid-column: 6 / span 2;
+    grid-row: 8 / 9; }
 
 .heading__main {
-  grid-column: 4 / 7;
+  grid-column: 4 / 8;
   grid-row: 5 / 6;
+  justify-self: center;
   color: #f1fff0;
   font-size: 3rem; }
 
