--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -21,7 +21,7 @@ body {
 }
 
 section {
-	margin: 0 3rem;
+	padding: 3rem;
 }
 
 ul {
