--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 header {
 	background-image: linear-gradient(#000000cc, #961826cc),
 		url('img/CCScreens.jpg');
-	background-size: contain;
+	background-size: cover;
 	background-position: unset;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -74,6 +74,8 @@ header {
 }
 
 .header__btn {
+	justify-self: center;
+
 	&--main {
 		grid-column: 4 / span 2;
 		grid-row: 8 / 9;
@@ -84,9 +86,11 @@ header {
 		grid-row: 8 / 9;
 	}
 }
+
 .heading__main {
-	grid-column: 4 / 7;
+	grid-column: 4 / 8;
 	grid-row: 5 / 6;
+	justify-self: center;
 	color: $color-white;
 	font-size: 3rem;
 }
